
The C<find_or_create_alternate()> method of
L<Bric::Biz::Asset::Business::Media|Bric::Biz::Asset::Business::Media> now
uses the correct output channel and respects the URI format. [Bret Dawson]

=item *

Fix for the possibility that a FTP server would return a list, not a text message, as
reported in L<this thread|http://www.gossamer-threads.com/lists/bricolage/users/40893>.
[Phillip Smith]

=back

=head1 Version 2.0.1 ()

=head2 Improvements

=over

=item *

Added C<SKIP_SSL_REDIRECT> F<bricolage.conf> directive. This directive
prevents Bricolage from redirecting to and from an SSL URL when C<SSL_ENABLE>
is turned on. The case for this is when Bricolage is running behind a reverse
proxy server that's handling SSL mappsings. Thanks to Alex Krohn for the
report. [David]

=item *

Added the "object" format for datetime values. Pass "object" as the formatting
string and a L<DateTime> object will be returned, rather than a string.
[David]

=item *

Refactored the SFTP mover to do proper error handling. Also removed the code
that "escapes" file names, as with more recent versions of Net::SSH2 it left
the backslashes in the file names. [David]

=item *

Bricolage now supports Apache 2 MPMs other than Prefork. YMMV (Bug #188).
[David]

=back

=head2 Bug Fixes

=over

=item *

Fixed a bug in the L<Bric::Util::ApacheReq> tests where they would fail if the
C<LISTEN_PORT> or C<SSL_PORT> F<bricolage.conf> directives were anything other
than 80 and 443, respectively. Thanks to Héctor Daniel Cortés González for the
report. [David]

=item *

The "Checkout" link no longer appears on desk items for users who do not have
permission to edit an asset [Kahil Jallad].

=item *

Fixed a bug where the SFTP mover would not properly finish moving the file,
leaving escaped tmp files on the destination server. [Matt Rolf]

=item *

Updating published stories or media or deployed templates via the SOAP
interface with the C<EXPIRE_ON_DEACTIVATE> F<bricolage.conf> directive enabled